tests/type/bad/array_elem_mismatch.hel
foreign io_unit: IO<()>;

x: [i32; 2] = [1, true];

main = io_unit;
